tests/ui/lint/snapshots/redundant_fstring_conversion_itoa.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant `Itoa`
   ╭─[test.lis:7:23]
 6 │   let n = 42
 7 │   fmt.Print(f"count: {strconv.Itoa(n)}")
   ·                       ───────┬───────
   ·                              ╰── converts to a string
 8 │ }
   ╰────
  help: Interpolate `n` directly. The f-string already formats it as a string · code: [lint.redundant_fstring_conversion]
