tests/ui/lint/snapshots/redundant_fstring_conversion_sprint.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant `Sprint`
   ╭─[test.lis:6:20]
 5 │   let n = 42
 6 │   fmt.Print(f"n = {fmt.Sprint(n)}")
   ·                    ──────┬──────
   ·                          ╰── converts to a string
 7 │ }
   ╰────
  help: Interpolate `n` directly. The f-string already formats it as a string · code: [lint.redundant_fstring_conversion]
