tests/ui/lint/snapshots/redundant_guards_reversed_operands.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant guard
   ╭─[test.lis:4:16]
 3 │   match o {
 4 │     Some(x) if 5 == x => 1,
   ·                ───┬──
   ·                   ╰── the pattern can test this directly
 5 │     _ => 0,
   ╰────
  help: Replace `x` with `5` in the pattern and drop the guard · code: [lint.redundant_guards]
