tests/ui/lint/snapshots/redundant_guards_top_level_binding.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant guard
   ╭─[test.lis:4:10]
 3 │   match n {
 4 │     x if x == 5 => 1,
   ·          ───┬──
   ·             ╰── the pattern can test this directly
 5 │     _ => 0,
   ╰────
  help: Replace `x` with `5` in the pattern and drop the guard · code: [lint.redundant_guards]
